fixes for nav bar and spacing elements on page

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -43,7 +43,7 @@ footer{
     font-size: 20px;
 }
 .contentbox h3{
-    margin-left: 10px;
+    margin: 10px;
 }
 date{
 	margin: 0.5rem;
@@ -72,8 +72,9 @@ nav ul{
     display: block;
 	padding: .8rem 2vw;
 	text-decoration: none;
-    border-top: 1px solid rgba(255,255,255,0.5);
+    border: 1px solid rgba(255,255,255,0.5);
     margin-right: 40px;
+    margin-bottom: 10px;
 }
 #chambspot3{
     display: none;
@@ -81,10 +82,7 @@ nav ul{
 #join{
     display: none;
 }
-#twit{
-    border-bottom: 1px solid rgba(255,255,255,0.5);
-}
-#addressend{
+#footaddress{
     border-bottom: 1px solid rgba(255,255,255,0.5);
     padding-bottom: 20px;
 }
@@ -107,6 +105,9 @@ nav ul{
 nav ul.open{
 	display: block;
     flex: 1 1 auto;
+}
+.navlink{
+    padding: 15px;
 }
 
 #hamburgerBtn span:nth-child(1) {display:block;}
