--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -3,12 +3,15 @@
         display: flex;
         flex-direction: row;
         flex: 1 1 auto;
+        justify-content: center;
+        flex-wrap: wrap;
     }
     nav ul li a{
         background-color: #555;
         color: #1a4173;
         max-width: 100%;
         justify-items: center;
+
     }
     nav button{
         display: none;
@@ -24,7 +27,7 @@
     
     #hamburgerBtn.open span:nth-child(1) {display:none;}
     #hamburgerBtn.open span:nth-child(2) {display:none;}    
-}
+
 .chamberflex{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -65,6 +68,21 @@
     grid-row: 3 / 4;
 }
 
+#footaddress{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+}
+footer img{
+    grid-column: 1 / 2;
+    margin-left: auto;
+    margin-right: auto;
+}
+#address{
+    margin-top: 20px;
+    grid-column: 2 / 3;
+}
+}
 
 
 
