--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -3,12 +3,15 @@
         display: flex;
         flex-direction: row;
         flex: 1 1 auto;
+        justify-content: center;
+        flex-wrap: wrap;
     }
     nav ul li a{
         background-color: #555;
         color: #1a4173;
         max-width: 100%;
         justify-items: center;
+        padding: 20px;
     }
     nav button{
         display: none;
